--- a/.github/workflows/GithubIntegration.yml
+++ b/.github/workflows/GithubIntegration.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Build Solution
       run: |
         msbuild.exe GitHubIntegration.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
-         
+    - name: Test
+      run: dotnet test GitHubIntegrationTest.csproj     
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
