--- a/.github/workflows/GithubIntegration.yml
+++ b/.github/workflows/GithubIntegration.yml
@@ -31,11 +31,7 @@ jobs:
         msbuild.exe GitHubIntegration.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
    
     - name: Run vstests
-      uses: microsoft/vstest-action@v1.0.0
-      with:
-       testAssembly: GitHubIntegrationTest.dll
-       searchFolder: .\GitHubIntegrationTest\bin\Release\
-       runInParallel: true
+      run: dotnet test ".\GitHubIntegrationTest\GitHubIntegrationTest\GitHubIntegrationTest.csproj" --configuration "Release"
        
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
