--- a/.github/workflows/GithubIntegration.yml
+++ b/.github/workflows/GithubIntegration.yml
@@ -31,7 +31,7 @@ jobs:
         msbuild.exe GitHubIntegration.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
    
     - name: Run vstests
-      run: dotnet test "GitHubIntegrationTest/GitHubIntegrationTest.csproj" --configuration "Release"
+      run: dotnet test "GitHubIntegrationTest/GitHubIntegrationTest.csproj" --no-build --verbosity normal
        
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
