--- a/.github/workflows/GithubIntegration.yml
+++ b/.github/workflows/GithubIntegration.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Setup a Job
+      uses: actions/checkout@v2
     
     - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
-      
+      uses: microsoft/setup-msbuild@v1      
          
     - name: Navigate to Workspace
       run: cd $GITHUB_WORKSPACE
